--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# ...existing code...
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
 
 # Editor directories and files
 .vscode/*
@@ -22,8 +23,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-
-.env/
-
-node_modules/
